@@ -4,7 +4,7 @@
 # Copyright (C)2003 Dan Potter
 #
 
-DIRS = 2ndmix basic libdream kgl hello sound png network vmu conio pvr video lua parallax modem
+DIRS = 2ndmix basic libdream kgl hello sound png network vmu conio pvr video lua parallax modem dreameye
 ifdef KOS_CCPLUS
 	DIRS += cpp tsunami
 endif
