@@ -1,0 +1,15 @@
+# KallistiOS ##version##
+#
+# examples/dreamcast/dreameye/Makefile
+# Copyright (C) 2009 Lawrence Sebald
+#
+
+all:
+	$(KOS_MAKE) -C basic
+
+clean:
+	$(KOS_MAKE) -C basic clean
+
+dist:
+	$(KOS_MAKE) -C basic dist
+
