@@ -177,6 +177,8 @@ KallistiOS version 1.3.0 -----------------------------------------------
 - DC  Added reading of the ISP settings from PlanetWeb to the flashrom code [LS]
 - DC  Fixed various pieces of code that rely on flashrom_ispcfg_t [LS]
 - *** Added an implementation of DHCP to the network stack [LS]
+- DC  Added Dreameye driver that is capable of fetching stored images from the
+      device. [LS]
 
 KallistiOS version 1.2.0 -----------------------------------------------
 - DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
